<resources>
    <string name="app_name">益宠</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="setting">设置</string>
    <string name="login">益宠</string>
    <string name="split">分隔图片</string>
    <string name="code">验证码</string>
    <string name="getVerification">获取短信验证码</string>
    <string name="code_hide">请输入验证码</string>
    <string name="Welfare_news"> “123公益日”，一场点缀着科技之光的公益盛典在北京举行。在这场轻松筹公益盛典中，阿凡题荣获“123年度公益爱心企业”奖。</string>
    <string name="Welfare_news_date">2017/10/17</string>
    <string name="aboutUs">      “益宠”把电子商务的经营模式与传统慈善公益结合起来运作，用电子商务的公开性、广泛参与性与社会优势，增加资金收入，降低管理成本与交流成本，服务慈善业务发展，奉献更多爱心。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginInterface">http://112.74.188.94:8080/pet/login.jsp</string>
    <string name="NewsInterface">http://112.74.188.94:8080/pet/News.jsp</string>
    <string name="WelfareInterface">http://112.74.188.94:8080/pet/Welfare.jsp</string>
    <string name="PetShowInterface">http://112.74.188.94:8080/pet/PetShow.jsp</string>
    <string name="adoptInterface">http://112.74.188.94:8080/pet/AdoptPet.jsp</string>
    <string name="findpetInterface">http://112.74.188.94:8080/pet/FindPet.jsp</string>
    <string name="adviceInterface">http://112.74.188.94:8080/pet/Advice.jsp</string>
    <string name="userInfoInterface">http://112.74.188.94:8080/pet/UserInfo.jsp</string>
    <string name="UpuserInfoInterface">http://112.74.188.94:8080/pet/UpUserInfo.jsp</string>
    <string name="GetPetShowInterface">http://112.74.188.94:8080/pet/GetPetShow.jsp</string>
    <string name="GetFindPetInterface">http://112.74.188.94:8080/pet/GetFindPet.jsp</string>
    <string name="GetAdoptPetInterface">http://112.74.188.94:8080/pet/GetAdoptPet.jsp</string>
</resources>
